REGRESSION(r206127): ASSERTION FAILED: !isClosed() in WebCore::MediaSource::detachFromElement https://bugs.webkit.org/show_bug.cgi?id=162307

Reviewed by Eric Carlson.

The test is crashing when the ScriptExecutionContext is calling stop() on the media element before
it's attached MediaSource has been open()ed, which is a valid state. Removing this ASSERT().

* Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::detachFromElement):

Canonical link: https://commits.webkit.org/180359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206211 268f45cc-cd09-0410-ab3c-d52691b4dbfc